--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,8 +11,8 @@ GenericSetup Product Changelog
     - Forward ported changes from GenericSetup 0.11 and 0.12 (which were
       created in a separate repository).
 
-    - In extension profiles, sequence properties are now extended
-      instead of replaced, except if the 'purge' attribute is true.
+    - A sequence property with the purge="False" attribute will not be
+      purged. This is useful in extension profiles.
 
     - Don't export or purge read-only properties. Correctly purge
       non-deletable int/float properties.
