When a sequence property is updated in purge="False" mode, don't just append but also remove duplicates. This gives the same semantics that for actions or objects in a folder. This way you can have extension profiles that safely add things to an existing property.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,7 +14,8 @@ GenericSetup Product Changelog
       created in a separate repository).
 
     - A sequence property with the purge="False" attribute will not be
-      purged. This is useful in extension profiles.
+      purged, but merged (the sequences are treated as sets, which means
+      that duplicates are removed). This is useful in extension profiles.
 
     - Don't export or purge read-only properties. Correctly purge
       non-deletable int/float properties.
