- added some basic documentation

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,8 @@ GenericSetup Product Changelog
 
   After GenericSetup 1.0
 
+    - Added a doc directory including some basic documentation.
+
     - Made GenericSetup a standalone package independent of the CMF
 
     - Added 'for_' argument to profile registry operations.
