--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,10 @@
 GenericSetup Product Changelog
 
+  GenericSetup 1.1-beta2 (2006/03/26)
+
+    No changes - tag created to coincide with CMF 2.0.0-beta2
+
+
   GenericSetup 1.1-beta (2006/03/08)
 
     - Allowed subclasses of DAVAwareFileAdapter to override the filename
