* adding support for PageTemplate import / export; modeled closely after   existing PythonScript support
-This line, and those below, will be ignored--

M    configure.zcml
A    PageTemplates
A    PageTemplates/tests
AM   PageTemplates/tests/test_exportimport.py
AM   PageTemplates/tests/__init__.py
AM   PageTemplates/exportimport.py
AM   PageTemplates/configure.zcml
AM   PageTemplates/__init__.py
AM   PageTemplates/interfaces.py
M    CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 GenericSetup Product Changelog
 
+  GenericSetup 1.2 (unreleased)
+
+    - Added support for PageTemplate import/export, modeled closely after
+      existing PythonScript support
+
   GenericSetup 1.1 (2006/04/16)
+
     - The dependency sorting was highly reliant on steps being added in the
       right order to work. If import step A depends on import step B which 
       depends on step C, and step C gets processed early, and they were 
