--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,6 @@
 GenericSetup Product Changelog
 
-  GenericSetup 1.2 (unreleased)
+  GenericSetup 1.2-beta (2006/09/20)
 
     - tool:  Added support for uploading a tarball on the "Import" tab
       (i.e., one produced on the export tab).
