--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,14 @@
 GenericSetup Product Changelog
 
 
-  GenericSetup 1.3.1 (unreleased)
+  GenericSetup 1.3.2 (unreleased)
+
+    - components: Provide log output when purging utilities or adapters.
+
+    - components: Fixed an undefined variable name in a log message.
+
+
+  GenericSetup 1.3.1 (2007/08/08)
 
     - components: correct the object path for the site root to be the
       empty string.
